# GView

./: CMakeLists.txt  vcpkg.json
Types/GIF/: CMakeLists.txt
Types/GIF/include/: gif.hpp
Types/GIF/src/: CMakeLists.txt  GIFFile.cpp  PanelInformation.cpp  gif.cpp
